Add gameplay and team selection

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Project 232",
+  "name": "Project 232 - Turn Based POC",
   "icons": [
     {
       "src": "favicon.ico",
